src/assets/css/style-attack.css
/* ... */
.matrix .technique-cell:not(.colored):not(.supertechniquecell) {
  outline-color: rgb(223.125, 223.125, 223.125);
}

.matrix-controls {
  margin: auto;
  width: 50%;
  padding: 1rem;
}
.matrix-controls button {
  border-color: rgb(223.125, 223.125, 223.125);
  background: white;
  color: #39434c;
}
.matrix-controls button:hover {
  background: rgb(244.8, 244.8, 244.8);
}
.matrix-controls .layout-button:active {
  color: #16181b;
  text-decoration: none;
  background-color: #f8f9fa;
}

.center-controls .matrix-controls .btn-toolbar {
  justify-content: center;
}

.btn-toolbar {
  justify-content: center;
}

.version-button.permalink .live {
  display: none;
}
.version-button.live .permalink {
  display: none;
}

.version-table .table-break-row {
  border-right-color: white;
  border-left-color: white;
  padding: 1rem 0;
}

/*# sourceMappingURL=style-attack.css.map */
.tab-content {
  min-width: fit-content;

}

  /* make links un-clickable */
  a {
    cursor: default;
    pointer-events: none;

    img {
      pointer-events: none;
      cursor: default;
    }
  }


.collapse:not(.show) {
  display: block !important;
}

.collapse {
  visibility: visible !important;
}

